数据操作之选取数据（使用布尔索引选取数据）

--- a/part_5.ipynb
+++ b/part_5.ipynb
@@ -1572,32 +1572,469 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "1b4b9f41-d2f7-49c9-9da8-fb93cb9ccacb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "user_id\n",
+       "1001    False\n",
+       "1000    False\n",
+       "1002     True\n",
+       "1003    False\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 使用布尔索引选取数据【and —— &，or —— |，not —— ~】\n",
+    "# 只展示居住在美国且年龄在40岁以上的学员\n",
+    "tf = (df[\"age\"] > 40) & (df[\"country\"] == \"USA\")\n",
+    "# tf这个Series中只有True和False\n",
+    "tf"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "17b19634-5fe0-4d00-ba8b-47e0980a1f91",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>properties</th>\n",
+       "      <th>name</th>\n",
+       "      <th>age</th>\n",
+       "      <th>country</th>\n",
+       "      <th>score</th>\n",
+       "      <th>continent</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>user_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1002</th>\n",
+       "      <td>Tim</td>\n",
+       "      <td>41</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>America</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "properties name  age country  score continent\n",
+       "user_id                                      \n",
+       "1002        Tim   41     USA    3.9   America"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[tf, :]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "206a6da4-91bf-455c-ba4e-74747ed51403",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>properties</th>\n",
+       "      <th>name</th>\n",
+       "      <th>age</th>\n",
+       "      <th>country</th>\n",
+       "      <th>score</th>\n",
+       "      <th>continent</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>user_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1002</th>\n",
+       "      <td>Tim</td>\n",
+       "      <td>41</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>America</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1003</th>\n",
+       "      <td>Jenny</td>\n",
+       "      <td>12</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>Europe</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "properties   name  age  country  score continent\n",
+       "user_id                                         \n",
+       "1002          Tim   41      USA    3.9   America\n",
+       "1003        Jenny   12  Germany    9.0    Europe"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 对索引进行筛选\n",
+    "df.loc[df.index > 1001, :]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "50f15494-25d0-4bc0-af27-b9a10bfa2797",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>properties</th>\n",
+       "      <th>name</th>\n",
+       "      <th>age</th>\n",
+       "      <th>country</th>\n",
+       "      <th>score</th>\n",
+       "      <th>continent</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>user_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1001</th>\n",
+       "      <td>Mark</td>\n",
+       "      <td>55</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>Europe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1003</th>\n",
+       "      <td>Jenny</td>\n",
+       "      <td>12</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>Europe</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "properties   name  age  country  score continent\n",
+       "user_id                                         \n",
+       "1001         Mark   55    Italy    4.5    Europe\n",
+       "1003        Jenny   12  Germany    9.0    Europe"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Python的列表可以使用in运算符判断是否包含某些对象，\n",
+    "# 若在Series中进行类似操作使用isin()\n",
+    "# 筛选出所有来自意大利和德国的学员\n",
+    "df.loc[df[\"country\"].isin([\"Italy\", \"Germany\"])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "950e54e7-4682-480c-9353-dca6aae45e5a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City1</th>\n",
+       "      <th>City2</th>\n",
+       "      <th>City3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>300.1</td>\n",
+       "      <td>400.3</td>\n",
+       "      <td>1000.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>100.2</td>\n",
+       "      <td>300.4</td>\n",
+       "      <td>1100.6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   City1  City2   City3\n",
+       "0  300.1  400.3  1000.5\n",
+       "1  100.2  300.4  1100.6"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 不使用loc[]的情况下传递一整个布尔DataFrame作为参数：df[boolean_df]\n",
+    "# df[boolean_df]————即DataFrame只包含数字时这种语法特别有用\n",
+    "# 返回的DataFrame会在原DataFrame的基础上，把对应着False的地方变成NaN\n",
+    "# 当作以毫米为单位的年降雨量\n",
+    "rainfall = pd.DataFrame(data={\"City1\": [300.1, 100.2],\n",
+    "                             \"City2\": [400.3, 300.4],\n",
+    "                             \"City3\": [1000.5, 1100.6]})\n",
+    "rainfall"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "1555c5fb-9c1d-4fda-8979-c499d53a8451",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City1</th>\n",
+       "      <th>City2</th>\n",
+       "      <th>City3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   City1  City2  City3\n",
+       "0   True  False  False\n",
+       "1   True   True  False"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rainfall < 400"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "e4e3b314-a550-4808-8bfe-6d049307e4bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City1</th>\n",
+       "      <th>City2</th>\n",
+       "      <th>City3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>300.1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>100.2</td>\n",
+       "      <td>300.4</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   City1  City2  City3\n",
+       "0  300.1    NaN    NaN\n",
+       "1  100.2  300.4    NaN"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rainfall[rainfall < 400]"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50f15494-25d0-4bc0-af27-b9a10bfa2797",
+   "id": "62e014ef-8036-4ea7-806f-b6a33287e068",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1605,7 +2042,63 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "950e54e7-4682-480c-9353-dca6aae45e5a",
+   "id": "1d87ee91-026f-46a3-a750-2bffba5f1cf4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "905e2d3f-f877-45e9-869e-5ba5ce9765eb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0dfb28cb-6184-41c5-9753-fae6dd6add94",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33c26860-fde7-4f3c-a194-c30a2961c54e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af2bb2c9-7fbd-45ad-a2c5-05ed73901deb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f2c34ca-b548-4282-a090-f256dfdbc1ef",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ef9dfac-0330-4b31-89a0-65da8c4661b2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b83176c5-d990-4c03-a671-a6dc93a8b724",
    "metadata": {},
    "outputs": [],
    "source": []
