数据操作之选取数据（使用MultiIndex选取数据）

--- a/part_5.ipynb
+++ b/part_5.ipynb
@@ -2033,67 +2033,351 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "62e014ef-8036-4ea7-806f-b6a33287e068",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>properties</th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>age</th>\n",
+       "      <th>score</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>continent</th>\n",
+       "      <th>country</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">America</th>\n",
+       "      <th>USA</th>\n",
+       "      <td>1000</td>\n",
+       "      <td>John</td>\n",
+       "      <td>33</td>\n",
+       "      <td>6.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>USA</th>\n",
+       "      <td>1002</td>\n",
+       "      <td>Tim</td>\n",
+       "      <td>41</td>\n",
+       "      <td>3.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Europe</th>\n",
+       "      <th>Germany</th>\n",
+       "      <td>1003</td>\n",
+       "      <td>Jenny</td>\n",
+       "      <td>12</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Italy</th>\n",
+       "      <td>1001</td>\n",
+       "      <td>Mark</td>\n",
+       "      <td>55</td>\n",
+       "      <td>4.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "properties         user_id   name  age  score\n",
+       "continent country                            \n",
+       "America   USA         1000   John   33    6.7\n",
+       "          USA         1002    Tim   41    3.9\n",
+       "Europe    Germany     1003  Jenny   12    9.0\n",
+       "          Italy       1001   Mark   55    4.5"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 使用MultiIndex选取数据\n",
+    "# 待排序的MultiIndex\n",
+    "df_multi = df.reset_index().set_index([\"continent\", \"country\"])\n",
+    "df_multi = df_multi.sort_index()\n",
+    "df_multi"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "1d87ee91-026f-46a3-a750-2bffba5f1cf4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>properties</th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>age</th>\n",
+       "      <th>score</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>country</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Germany</th>\n",
+       "      <td>1003</td>\n",
+       "      <td>Jenny</td>\n",
+       "      <td>12</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Italy</th>\n",
+       "      <td>1001</td>\n",
+       "      <td>Mark</td>\n",
+       "      <td>55</td>\n",
+       "      <td>4.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "properties  user_id   name  age  score\n",
+       "country                               \n",
+       "Germany        1003  Jenny   12    9.0\n",
+       "Italy          1001   Mark   55    4.5"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "''' \n",
+    "pandas对MultiIndex的输出进行了美化\n",
+    "不会为每一行数据重复输出最左端的索引级别（大洲）\n",
+    "只会在数据所在大洲发生改变时才进行输出\n",
+    "'''\n",
+    "df_multi.loc[\"Europe\", :]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "905e2d3f-f877-45e9-869e-5ba5ce9765eb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>properties</th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>age</th>\n",
+       "      <th>score</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>continent</th>\n",
+       "      <th>country</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Europe</th>\n",
+       "      <th>Italy</th>\n",
+       "      <td>1001</td>\n",
+       "      <td>Mark</td>\n",
+       "      <td>55</td>\n",
+       "      <td>4.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "properties         user_id  name  age  score\n",
+       "continent country                           \n",
+       "Europe    Italy       1001  Mark   55    4.5"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 通过多级索引选取数据需要提供一个元组作为参数\n",
+    "df_multi.loc[(\"Europe\", \"Italy\"), :]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0dfb28cb-6184-41c5-9753-fae6dd6add94",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "33c26860-fde7-4f3c-a194-c30a2961c54e",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "af2bb2c9-7fbd-45ad-a2c5-05ed73901deb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5f2c34ca-b548-4282-a090-f256dfdbc1ef",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3ef9dfac-0330-4b31-89a0-65da8c4661b2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>properties</th>\n",
+       "      <th>continent</th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>age</th>\n",
+       "      <th>score</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>country</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>USA</th>\n",
+       "      <td>America</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>John</td>\n",
+       "      <td>33</td>\n",
+       "      <td>6.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>USA</th>\n",
+       "      <td>America</td>\n",
+       "      <td>1002</td>\n",
+       "      <td>Tim</td>\n",
+       "      <td>41</td>\n",
+       "      <td>3.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Germany</th>\n",
+       "      <td>Europe</td>\n",
+       "      <td>1003</td>\n",
+       "      <td>Jenny</td>\n",
+       "      <td>12</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Italy</th>\n",
+       "      <td>Europe</td>\n",
+       "      <td>1001</td>\n",
+       "      <td>Mark</td>\n",
+       "      <td>55</td>\n",
+       "      <td>4.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "properties continent  user_id   name  age  score\n",
+       "country                                         \n",
+       "USA          America     1000   John   33    6.7\n",
+       "USA          America     1002    Tim   41    3.9\n",
+       "Germany       Europe     1003  Jenny   12    9.0\n",
+       "Italy         Europe     1001   Mark   55    4.5"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 选择性得重置一部分（即取消多索引）MultiIndex，可以为reset_index提供索引级别（从左至右，从0开始）参数\n",
+    "df_multi.reset_index(level=0)"
+   ]
   },
   {
    "cell_type": "code",
